syntax = "proto3";

option go_package = "github.com/nanachi-sh/susubot-code/basic/fileweb/protos/fileweb";

service FileWeb {
    rpc Upload (UploadRequest) returns (UploadResponse);
}

message UploadRequest {
    bytes Buf = 1;
    optional string Hash = 2; //murmurhash3
    optional uint32 ValidTime = 3; //过期时间(ms)
    bool AutoRefresh = 4; //资源被请求后自动重置过期时间
}

message UploadResponse {
    string Hash = 1;
    string URLPath = 2;
}